# rust-book

./: README.md
emb/hello/: Cargo.toml
emb/hello/.cargo/: config
mandelbrot/: Cargo.toml
mandelbrot/src/: logic.rs
mandelbrot/www/: index.html  index.js
numberplace/: Cargo.toml  LICENSE_MIT
numberplace/src/: lib.rs
numberplace/www/: index.js  package.json
product/optimize/: Cargo.toml
product/sum/fuzz/: Cargo.toml
samplecli/: Cargo.toml
samplecli/src/: main.rs
todo/: .gitignore  Cargo.toml  Dockerfile
todo/src/: main.rs
tools/: .gitignore
tools/app/: Cargo.toml
tools/bench/benches/: hash.rs
tools/bench2/: Cargo.toml
tools/bench2/benches/: benchmark.rs
tools/coverage/src/: lib.rs
tools/graph/: Cargo.toml
tools/sample/: Cargo.toml
tools/workspace/: Cargo.toml
tools/workspace/main/: Cargo.toml
tools/workspace/sub/src/: lib.rs
ui_demo/: Cargo.toml
ui_demo/src/: main.rs
