[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.14"
cortex-m-semihosting = "0.3.7"
embedded-hal = "0.2.5"
panic-halt = "0.2.0"
stm32f4xx-hal = {version="0.9.0", features=["stm32f407"]}
